# ziemniak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
src/: main.cpp
